5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1638_2450.log
== TEST (2019-04-11 11:34:31) 
-- CODE:
x = input("nome: ").upper()
y = input("nome: ").upper()

if(x > y):
	print(x)
	print(y)
else:
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:34:38) 
-- CODE:
x = input("nome: ").upper()
y = input("nome: ").upper()

if(x > y):
	print(x)
	print(y)
else:
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:34:42) 
-- CODE:
x = input("nome: ").upper()
y = input("nome: ").upper()

if(x > y):
	print(x)
	print(y)
else:
-- ERROR:
File "XXXX", line 8
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:35:23) 
-- CODE:
x = input("nome: ").upper()
y = input("nome: ").upper()

if(x > y):
	print(x)
	print(y)
else:
	msg = x < y
-- ERROR:
File "XXXX", line 8
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:35:50) 
-- CODE:
x = input("nome: ").upper()
y = input("nome: ").upper()

if(x < y):
	print(x)
	print(y)
else:
	msg = x = y
-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:28) 
-- CODE:
x = input("nome: ").upper()
y = input("nome: ").upper()

if(x < y):
	print(x)
	print(y)
else:
	msg = x == y
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:38:20) 
-- CODE:
x = input("nome: ").upper()
y = input("nome: ").upper()

if(x <= y):
	print(x)
	print(y)
else:
	

-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:40:27) 
-- CODE:
x = input("nome: ")
y = input("nome: ")

if(x.upper() <= y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:41:06) 
-- CODE:
x = input("nome: ")
y = input("nome: ")

if(x <= y):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:41:20) 
-- CODE:
x = input("nome: ")
y = input("nome: ")

if(x <= y):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:42:02) 
-- CODE:
x = input("nome: ")
y = input("nome: ")

if(x.upper() <= y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:42:16) 
-- CODE:
x = input("nome: ")
y = input("nome: ")

if(x.upper() <= y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- EXECUTION TIME:
0.179056
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
